more buss css fixes, along with some main.css fixes (it was causing a overflow -> ugly scrollbar somewhere)

--- a/views/css/bus.css
+++ b/views/css/bus.css
@@ -13,11 +13,11 @@ img.buspaper {
 }
 
 #buspaperr {
-  height:100vw;
+  width:90vw;
 }
 
 .bus {
-  font-size: 1.4vw;
+  font-size: 4vw;
   text-align: center;
   font-family: 'Arial';
   position: absolute;
@@ -28,64 +28,62 @@ img.buspaper {
 }
 
 #bus2container {
-  width: 10%;
-  margin-top: 19vw;
-  margin-left: 1.9vw;
+  width: 21vw;
+  margin-top: 41vw;
+  margin-left: 4vw;
   text-align: center;
   position:absolute;
   font-family: 'Open Sans', sans-serif;
 }
 #bus24container {
-  width: 10%;
-  height: 10%;
-  margin-top: 19vw;
+  width: 21vw;
+  margin-top: 41vw;
   text-align: center;
   position: absolute;
-  margin-left:15.1vw;
+  margin-left:35vw;
   font-family: 'Open Sans', sans-serif;
 }
 #bus5container {
-  width: 10%;
-  height: 10%;
-  margin-top: 19vw;
+  width: 21%;
+  margin-top: 41vw;
   text-align: center;
   position: absolute;
-  margin-left: 28.8vw;
+  margin-left: 64.4vw;
   font-family: 'Open Sans', sans-serif;
 }
 
 .locationContainer {
   position: absolute;
-  top: 37.9vw;
-  font-size: 1.4vw;
+  top: 84vw;
+  font-size: 3.3vw;
 }
 #simeiContainer {
-  margin-left:6.6vw;
+  margin-left:14.7vw;
   text-align: center;
 }
 #tanahContainer {
-  left: 20vw;
+  left: 44.5vw;
   text-align: center;
 }
 #simpangContainer {
-  left: 32.9vw;
+  left: 73vw;
   text-align: center;
 }
 .location2Container {
   text-align: center;
   position: absolute;
-  top: 64.6vw;
-  font-size: 1.4vw;
+  top: 144.2vw;
+  font-size: 3vw;
 }
 #pasirContainer {
-  left: 21.6vw;
+  left: 48.1vw;
   text-align: center;
 }
 #jurongContainer {
   text-align: center;
-  left: 7.9vw;
+  left: 17.5vw;
 }
 #airportContainer {
   text-align: center;
-  left: 33vw;
+  left: 73.6vw;
 }
